--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <button type="button" value="  1  " onclick="addChar(this.form.display, '1')" style="background-color: #ffffff;">1</button>
           <button type="button" value="  2  " onclick="addChar(this.form.display, '2')" style="background-color: #ffffff;">2</button>
           <button type="button" value="  3  " onclick="addChar(this.form.display, '3')" style="background-color: #ffffff;">3</button>
-          <button type="button" value="+" onclick="display.value ='+' " style="background-color: #f9f9f9;">+</button>
+          <button type="button" value="   +  " ONCLICK="addChar(this.form.display, '+')" style="background-color: #f9f9f9;">+</button>
         </div>
 
         <div class="button" style="background-color: #f3f3f3;">
